# django-bootstrap4

./: .coveragerc  .gitignore  .travis.yml  AGENTS.md  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  MIGRATE.rst  Makefile  README.md  README.rst  manage.py  pyproject.toml  pyvenv.cfg  requirements-dev.txt  requirements-test.txt  requirements.txt  runtests.py  setup.cfg  setup.py  testsettings.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-approve-and-merge.yml  test.yml
Scripts/: activate  activate.bat  activate.fish  activate.xsh
bootstrap4/: __init__.py  _version.py  bootstrap.py  components.py  exceptions.py  forms.py  renderers.py  tests.py  text.py  utils.py  widgets.py
bootstrap4/templates/bootstrap4/: bootstrap4.html  field_errors.html  field_help_text.html  field_help_text_and_errors.html  form_errors.html  messages.html  pagination.html
bootstrap4/templatetags/: bootstrap3.py  bootstrap4.py
demo/app/: forms.py  settings.py  urls.py  views.py  wsgi.py
demo/demo/: forms.py  settings.py  wsgi.py
demo/demo/templates/demo/: base.html  bootstrap.html  form.html  form_by_field.html  form_horizontal.html  form_inline.html  form_with_files.html  formset.html  home.html  misc.html  pagination.html
demo/templates/app/: form.html  form_by_field.html  misc.html
docs/: authors.rst  conf.py  example_template.rst  index.rst  installation.rst  migrate.rst  quickstart.rst  requirements.txt  settings.rst  templates.rst  templatetags.rst  widgets.rst
example/: .dockerignore  Dockerfile  README.md  README.rst  docker-compose.yml  requirements.txt  settings.py  urls.py
example/app/: forms.py  views.py
example/templates/app/: base.html  bootstrap.html  form.html  form_by_field.html  form_horizontal.html  form_inline.html  form_with_files.html  formset.html  home.html  misc.html  pagination.html
src/bootstrap4/: __about__.py  __init__.py  bootstrap.py  components.py  forms.py  renderers.py  text.py  utils.py  widgets.py
src/bootstrap4/templates/bootstrap4/: bootstrap4.html  field_errors.html  field_help_text.html  form_errors.html
src/bootstrap4/templates/bootstrap4/widgets/: datetime_field.html
src/bootstrap4/templates/django_bootstrap5/: bootstrap5.html  messages.html  pagination.html
src/bootstrap4/templates/django_bootstrap5/widgets/: radio_select.html  radio_select_button_group.html
src/bootstrap4/templatetags/: bootstrap4.py
src/django_bootstrap4/: __about__.py  __init__.py  bootstrap.py  components.py  core.py  css.py  forms.py  html.py  renderers.py  size.py  text.py  utils.py  widgets.py
src/django_bootstrap4/templates/django_bootstrap4/: bootstrap4.html  field_help_text.html  form_errors.html  messages.html  pagination.html
src/django_bootstrap4/templates/django_bootstrap4/widgets/: clearable_file_input.html  radio_select.html
src/django_bootstrap4/templates/django_bootstrap5/: bootstrap5.html  form_errors.html  messages.html
src/django_bootstrap4/templates/django_bootstrap5/widgets/: radio_select_button_group.html
src/django_bootstrap4/templatetags/: django_bootstrap4.py
tests/: base.py  forms.py  image.py  smoke_test.py  test_alerts.py  test_bootstrap_alert.py  test_bootstrap_button.py  test_bootstrap_css_and_js_tags.py  test_bootstrap_field.py  test_bootstrap_field_datetime.py  test_bootstrap_field_input_checkbox.py  test_bootstrap_field_input_color.py  test_bootstrap_field_input_file.py  test_bootstrap_field_input_range.py  test_bootstrap_field_input_text.py  test_bootstrap_field_parameters.py  test_bootstrap_field_radio_select.py  test_bootstrap_field_select.py  test_bootstrap_field_textarea.py  test_bootstrap_form.py  test_bootstrap_formset.py  test_bootstrap_label.py  test_bootstrap_messages.py  test_bootstrap_pagination.py  test_buttons.py  test_components.py  test_css.py  test_fields.py  test_forms.py  test_formsets.py  test_html.py  test_labels.py  test_media.py  test_messages.py  test_paginator.py  test_resources.py  test_settings.py  test_size.py  test_templates.py  test_templatetags.py  (+5 more)
tests/app/: settings.py
