[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Dylan Verheul", email = "dylan@dyve.net"},
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]
dependencies = [
  "Django>=4.2",
  "beautifulsoup4>=4.10.0",
]
description = "Bootstrap 4 for Django"
keywords = ["django", "bootstrap", "bootstrap4"]
license = {file = "LICENSE"}
name = "django-bootstrap4"
readme = "README.md"
requires-python = ">=3.9"
version = "25.1"

[project.urls]
Changelog = "https://github.com/zostera/django-bootstrap4/blob/main/CHANGELOG.md"
Documentation = "https://django-bootstrap4.readthedocs.io/"
Homepage = "https://github.com/zostera/django-bootstrap4"
Issues = "https://github.com/zostera/django-bootstrap4/issues"
Source = "https://github.com/zostera/django-bootstrap4"

[tool.ruff]
fix = false
line-length = 120
src = ["src"]
target-version = "py39"

[tool.ruff.lint]
fixable = [
  "I001", # isort (sorting)
  "F", # flake8
  "D", # docformatter
  "UP", # pyupgrade
]
ignore = [
  "D1", # D1: Missing docstring error codes (because not every function and class has a docstring)
  "D203", # D203: 1 blank line required before class docstring (conflicts with D211 and should be disabled, see https://github.com/PyCQA/pydocstyle/pull/91)
  "D212", # D212: Multi-line docstring summary should start at the first line
  "D301", # D301: Use r”“” if any backslashes in a docstring (unclear how else to handle backslashes in docstrings)
]
select = [
  "D", # pydocstyle
  "E", # pycodestyle
  "F", # flake8
  "I", # isort
  "UP", # pyupgrade
]
unfixable = [
  "F8", # names in flake8, such as defined but unused variables
]

[tool.ruff.lint.isort]
known-first-party = ["bootstrap4", "app"]
known-third-party = ["django"]

[tool.coverage.run]
branch = true
source = ["src", "tests"]

[tool.coverage.paths]
package = ["src/bootstrap4", "*/django_bootstrap4/src/bootstrap4"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[dependency-groups]
dev = [
  "check-manifest>=0.50",
  "check-wheel-contents>=0.6.0",
  "coverage[toml]>=7.6.1",
  "pyroma>=4.2",
  "ruff>=0.7.1",
  "tox-uv>=1.13.1",
  "twine>=5.1.1",
]
docs = [
  "furo>=2024.8.6",
  "myst-parser>=3.0.1",
  "sphinx>=7.1.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bootstrap4"]
